fix #6: przeplot/rozplot zgodny z definicjami formalnymi (cor:exact)
Hash uzywal delta_c zamiast z=db/(da+db) w retPos (maskowane w tescie
przez da=1); dataModel wolal Hash 1-bazowo i traktowal indeks postepujacy
jak offset wsteczny (ignorowany dla zrodel deklarowanych); DEHASH dostawal
licznik zrodla zamiast indeksu rekordu wyjsciowego (cale wyjscie null).

Naprawa: fetchForward (konwersja indeksu postepujacego na offset wsteczny
wzgledem licznika zrodla; historia deklaracji z bufora bez mutacji
biezacego payloadu; all-null przy niedostepnosci), wywolania 0-bazowe,
pojemnosc historii zrodel #/&/% w kompilatorze (kJunctionHistory).

Theta (&) opozniona o jeden slot (nieprzyczynowa z definicji; rekord 0
all-null, oznaczony w .meta); ~Theta (%) dokladna od rekordu 0.

Testy: wzorce z definicji, nie z implementacji — hash_operations_nonunit_
delta, hash_operations_equal_delta, divmod_inverts_hash (wlasnosc
cor:exact), integracyjny it_deinterleave_roundtrip (porownanie bitowe).
153/153.

Znane ograniczenie (kandydat fix #7): przeplot zrodel pochodnych emituje
null przy elementach jeszcze nieistniejacych w slocie c (kolejnosc
wykonania po rInterval); kampania 7.6 uzywa schematu dwufazowego.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>